program/tls/tomcat-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat
  namespace: test-ingress
spec:
  tls:
  - hosts:
    - master.sunlge.com
    secretName: tomcat-ingress-secret
  rules:
  - host: master.sunlge.com
    http:
      paths:
      - path: /
        backend:
         serviceName: tomcat-svc
         servicePort: 8080
